Fix alignment and add button

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   background-color: #eee9de;
   color: #333;
-  font-family: lato, sans-serif;
+  font-family: Lato, sans-serif;
   line-height: 1.5;
 }
 
@@ -10,10 +10,14 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+  padding: 2em;
+  text-align: center;
+}
+
 section {
   display: block;
-  text-align: center;
-  vertical-align: middle;
   width: 100%;
   padding-top: 2em;
   padding-bottom: 2em;
@@ -21,21 +25,45 @@ section {
 
 .image {
   padding: .75em;
-  margin: 1.5rem;
+  margin: 0 1.5rem;
   display: inline-block;
+  max-width: 25em;
+  vertical-align: middle;
+}
+
+img {
   width: 25em;
+}
+
+h2 {
+  display: inline-block;
+  margin: 0;
+}
+
+p {
+  display: inline-block;
 }
 
 .text {
   padding: .75em;
-  margin: 1.5rem;
+  margin: 0 1.5rem;
   display: inline-block;
   max-width: 25em;
   text-align: left;
+  vertical-align: middle;
 }
 
 a {
+  text-decoration: none;
   display: inline-block;
-  border-radius: 5px
-  padding: 1em;
+  color: #666;
+  border: 3px solid #333;
+  border-radius: 8px;
+  padding: .5em;
+}
+
+a:hover {
+  background-color: #666;
+  border-color: #666;
+  color: #fff;
 }
